--- a/styles.css
+++ b/styles.css
@@ -50,3 +50,28 @@ li {
     border-radius: 4px;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
 }
+
+
+.MainContainer {
+    perspective: 1px;
+    transform-style: preserve-3d;
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: scroll;
+  }
+  
+  .Parallax {
+    display: flex;
+    flex: 1 0 auto;
+    position: relative;
+    height: 100vh;
+    transform: translateZ(-1px) scale(2);
+    z-index: -1;
+  }
+  
+  .Content {
+    display: block;
+    position: relative;
+    background-color: white;
+    z-index: 1;
+  }
